--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "bootstrap": "^5.3.7",
+        "chart.js": "^4.5.0",
+        "jquery": "^3.7.1"
     }
 }
