--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.0.0",
+        "aos": "^2.3.4",
         "bootstrap": "^5.3.7",
         "chart.js": "^4.5.0",
         "jquery": "^3.7.1"
