demo payment key updated

--- a/.env
+++ b/.env
@@ -86,12 +86,12 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # Payment Gateway Configuration
-PAYSTACK_PUBLIC_KEY=
-PAYSTACK_SECRET_KEY=
+PAYSTACK_PUBLIC_KEY=sk_test_3508aa15f7793778213dfb7a4c5b7c0bf4453e51
+PAYSTACK_SECRET_KEY=pk_test_e15ac66acb27c2a2b3276b85cbdf8ca17628c8cd
 PAYSTACK_WEBHOOK_SECRET=
 
-FLUTTERWAVE_PUBLIC_KEY=
-FLUTTERWAVE_SECRET_KEY=
+FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-aa6ec8b7fc9920805ee79458627ab7b2-X
+FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-596efea0249c85517efb350ba5130c5b-X
 FLUTTERWAVE_WEBHOOK_SECRET=
 
 STRIPE_KEY=
