--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Kokokah
 APP_ENV=local
 APP_KEY=base64:rec8GBZBCxZ6yiVernpHkWCk4r7TpD2NxlDKNB44AWo=
 APP_DEBUG=true
-APP_URL=https://kokokah.com
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
