--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kokokah
-# DB_USERNAME=kokokah
-# DB_PASSWORD=M1aXe1m8&Vekvbm@
+DB_USERNAME=kokokah
+DB_PASSWORD=M1aXe1m8&Vekvbm@
 
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
