update quiz fixed

--- a/.env
+++ b/.env
@@ -24,8 +24,6 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kokokah
-
-
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -89,9 +87,12 @@ PAYSTACK_PUBLIC_KEY=sk_test_3508aa15f7793778213dfb7a4c5b7c0bf4453e51
 PAYSTACK_SECRET_KEY=pk_test_e15ac66acb27c2a2b3276b85cbdf8ca17628c8cd
 PAYSTACK_WEBHOOK_SECRET=
 
-FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-aa6ec8b7fc9920805ee79458627ab7b2-X
-FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-596efea0249c85517efb350ba5130c5b-X
+FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-24979283a83c673f85a10ac2ac366586-X
+FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-7e42f65fca8e3340b7a72c42aeaaf1a8-X
 FLUTTERWAVE_WEBHOOK_SECRET=
+# FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-aa6ec8b7fc9920805ee79458627ab7b2-X
+# FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-596efea0249c85517efb350ba5130c5b-X
+# FLUTTERWAVE_WEBHOOK_SECRET=
 
 STRIPE_KEY=
 STRIPE_SECRET=
