update the payment gateway feature and add money to wallet feature implemented

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Kokokah
 APP_ENV=local
 APP_KEY=base64:rec8GBZBCxZ6yiVernpHkWCk4r7TpD2NxlDKNB44AWo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -101,9 +102,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # Payment Gateway Configuration
-PAYSTACK_PUBLIC_KEY=sk_test_3508aa15f7793778213dfb7a4c5b7c0bf4453e51
-PAYSTACK_SECRET_KEY=pk_test_e15ac66acb27c2a2b3276b85cbdf8ca17628c8cd
+PAYSTACK_PUBLIC_KEY=pk_test_e15ac66acb27c2a2b3276b85cbdf8ca17628c8cd
+PAYSTACK_SECRET_KEY=sk_test_3508aa15f7793778213dfb7a4c5b7c0bf4453e51
 PAYSTACK_WEBHOOK_SECRET=
+PAYSTACK_PAYMENT_URL=https://api.paystack.co
+MERCHANT_EMAIL=developer@risenetworks.org
 
 FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-24979283a83c673f85a10ac2ac366586-X
 FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-7e42f65fca8e3340b7a72c42aeaaf1a8-X
