--- a/.env
+++ b/.env
@@ -84,14 +84,15 @@ REDIS_PORT=6379
 # MAIL_FROM_NAME="${APP_NAME}"
 
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="noreply@kokokah.com"
+MAIL_MAILER=smtp
+MAIL_SCHEME=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=taofeeq.muhammad22@gmail.com
+MAIL_PASSWORD=hxycxhyyvhaqtjxx
+MAIL_FROM_ADDRESS=taofeeq.muhammad22@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
