worked on chat room

--- a/.env
+++ b/.env
@@ -88,6 +88,7 @@ MAIL_MAILER=smtp
 MAIL_SCHEME=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
+MAIL_ENCRYPTION=tls
 MAIL_USERNAME=taofeeq.muhammad22@gmail.com
 MAIL_PASSWORD=hxycxhyyvhaqtjxx
 MAIL_FROM_ADDRESS=taofeeq.muhammad22@gmail.com
