--- a/.env
+++ b/.env
@@ -28,6 +28,12 @@ DB_DATABASE=kokokah
 DB_USERNAME=root
 DB_PASSWORD=
 
+
+
+# DB_USERNAME=kokokah
+# DB_PASSWORD=Ko5_vNi99y7kah
+
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
