--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Kokokah
 APP_ENV=local
 APP_KEY=base64:rec8GBZBCxZ6yiVernpHkWCk4r7TpD2NxlDKNB44AWo=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://kokokah.com
 FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
