--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^7.1.0",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "google-fonts": "^1.0.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^7.0.0",
         "bootstrap": "^5.3.7",
         "chart.js": "^4.5.0",
         "jquery": "^3.7.1",
