--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=kokokah_live
+DB_DATABASE=kokokah
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -40,7 +40,7 @@ BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-# Soketi Configuration (Self-hosted WebSocket Server) 
+# Soketi Configuration (Self-hosted WebSocket Server)
 PUSHER_APP_ID=1
 PUSHER_APP_KEY=app-key
 PUSHER_APP_SECRET=app-secret
