--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "google-fonts": "^1.0.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "terser": "^5.46.0",
         "vite": "^7.0.4"
     },
     "dependencies": {
