--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ SESSION_DOMAIN=null
 BROADCAST_DRIVER=pusher
 BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
 # Soketi Configuration (Self-hosted WebSocket Server)
 PUSHER_APP_ID=1
