--- a/.env
+++ b/.env
@@ -29,6 +29,14 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=kokokah
+# DB_USERNAME=kokokah
+# DB_PASSWORD=Ko5_vNi99y7kah
+
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
